# va-polling-validator

./: .gitignore  Procfile  README.md  nixpacks.toml  packages.txt  pyproject.toml  railway.json  render.yaml  requirements.txt  run_webapp.sh  streamlit_app.py
.streamlit/: config.toml  secrets.toml.example
src/va_polling_validator/: __init__.py  api_validator.py  cli.py  ga_validator.py  models.py  parallel_validator.py  processor.py  validator.py
webapp/backend/: app.py  main.py
webapp/frontend/: index.html
